[package]
name = "boml"
version = "0.3.0"
edition = "2021"
authors = ["BrightShard <brightshard@brightshard.dev>"]
description = "A dependency-free, (almost) 0-copy TOML parser."
repository = "https://github.com/Bright-Shard/boml"
license = "MIT OR Apache-2.0"
keywords = ["toml"]

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
