workspace = { members = ["boml-derive"] }

[package]
name = "boml"
version = "1.0.1"
edition = "2021"
authors = ["BrightShard <brightshard@brightshard.dev>"]
description = "A dead-simple, efficient, dependency-free TOML parser for Rust."
repository = "https://github.com/bright-shard/boml"
documentation = "https://docs.rs/boml"
license = "MIT OR Apache-2.0"
keywords = ["toml", "parser"]
rust-version = "1.78.0"

[dependencies.chrono]
version = "0.4"
optional = true
default-features = false
features = []

[dependencies.boml-derive]
path = "boml-derive"
optional = true

[dev-dependencies]
json = "0.12"
ureq = { version = "3.0", default-features = false, features = ["rustls"] }
chrono = "0.4"

boml-derive = { path = "boml-derive" }

[features]
default = []
chrono = ["dep:chrono"]
derive = ["dep:boml-derive"]

[package.metadata.docs.rs]
feature = ["chrono"]
